log/build_2023-02-02_12-41-21/py_pubsub/stderr.log
  File "/home/dunto/demo_ws/install/py_pubsub/lib/python3.8/site-packages/py_pubsub/publisher_member_function.py", line 130
    global rightKey = ArrowKey()
                    ^
SyntaxError: invalid syntax

